added some new solve

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(untitled)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES 1_1/structure_problem/prb_17.8.c)
+set(SOURCE_FILES 1_1/pointer_problem/prb_20.39.c)
 add_executable(untitled ${SOURCE_FILES})
+target_link_libraries(untitled m)
